chore: standardize formatting in workflows, documentation, and configurations across the project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,10 @@
     "rootDir": "./",
     "outDir": "./build"
   },
-  "exclude": ["./inertia/**/*", "node_modules", "build", "tmp"]
+  "exclude": [
+    "./inertia/**/*",
+    "node_modules",
+    "build",
+    "tmp"
+  ]
 }
