--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,5 @@
     "rootDir": "./",
     "outDir": "./build"
   },
-  "exclude": [
-    "./inertia/**/*",
-    "node_modules",
-    "build",
-    "tmp"
-  ]
+  "exclude": ["./inertia/**/*", "node_modules", "build", "tmp"]
 }
