--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "@swc/core": "1.13.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/luxon": "^3.7.1",
-    "@types/node": "^24.5.2",
+    "@types/node": "^24.6.0",
+    "@types/pdf-parse": "^1.1.5",
     "eslint": "^9.36.0",
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.1.1",
@@ -78,20 +79,27 @@
     "@adonisjs/session": "^7.5.1",
     "@adonisjs/shield": "^8.2.0",
     "@adonisjs/static": "^1.1.1",
-    "@aws-sdk/client-s3": "^3.896.0",
-    "@aws-sdk/s3-request-presigner": "^3.896.0",
+    "@aws-sdk/client-s3": "^3.899.0",
+    "@aws-sdk/s3-request-presigner": "^3.899.0",
     "@google-cloud/storage": "^7.17.1",
+    "@langchain/langgraph": "^0.4.9",
     "@rlanz/bull-queue": "^3.1.0",
     "@vinejs/vine": "^3.0.1",
+    "ai": "^5.0.59",
     "argon2": "^0.44.0",
     "axios": "^1.12.2",
     "better-sqlite3": "^12.4.1",
+    "cheerio": "^1.1.2",
     "edge.js": "^6.3.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.7.2",
+    "openai": "^5.23.1",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
-    "xlsx": "^0.18.5"
+    "tesseract.js": "^6.0.1",
+    "xlsx": "^0.18.5",
+    "zod": "^4.1.11"
   },
   "hotHook": {
     "boundaries": [
